# cryptanalyse-differentielle

./: CMakeLists.txt  OPTIMISATIONS.md  README.MD  README.md  optis.txt
apps/: demo_spn.cpp
src/: main.cpp  main_optimized.cpp
src/analysis/: DifferentialSearch.cpp  DifferentialSearch.h
src/cipher/: toy_cipher.cpp  toy_cipher.h
src/ciphers/CustomFeistel/: CustomFeistel.cpp  CustomFeistel.h
src/ciphers/Speck/: Speck.cpp  Speck.h
src/ciphers/ToySPN/: ToySPN.cpp  ToySPN.h
src/cryptanalysis/: differential_search.cpp  differential_search.h  distinguished_points.cpp  distinguished_points.h  optis.txt  parallel_search.cpp  parallel_search.h
src/interfaces/: ICipher.h
src/utils/: BitUtils.cpp  BitUtils.h  Types.h  types.h  utils.h
